Inclusão de rota para obtenção de consumo mensal

--- a/app/src/main/res/layout/activity_consumo.xml
+++ b/app/src/main/res/layout/activity_consumo.xml
@@ -3,12 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="15dp"
+    android:orientation="vertical"
     tools:context=".visao.ConsumoActivity">
+
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:max="100"
+        android:backgroundTint="#ffff"
+        android:indeterminateTint="#b0174b"
+        android:layout_marginTop="-7dp"
+        android:visibility="gone"/>
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/chart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="15dp"/>
 
 </LinearLayout>
